# gamestackr-backend

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml  readme.md
.github/workflows/: pr.yaml
core/core/utils/: misc.py
core/project/: asgi.py  wsgi.py
core/project/settings/: __init__.py  base.py  custom.py  envvars.py
gamestackr/: conftest.py  manage.py
gamestackr/accounts/: apps.py  signals.py  views.py
gamestackr/accounts/admin/: __init__.py  account_admin.py  account_setting_admin.py
gamestackr/accounts/manager/: __init__.py  account_manager.py
gamestackr/accounts/migrations/: 0001_initial.py
gamestackr/accounts/models/: __init__.py  account.py  account_setting.py
gamestackr/accounts/serializers/: accounts.py
gamestackr/accounts/tests/: test_rest_api.py
gamestackr/accounts/tests/fixtures/: __init__.py  account.py
gamestackr/core/: asgi.py  urls.py  wsgi.py
gamestackr/core/settings/: __init__.py  base.py  envvars.py
gamestackr/core/settings/templates/: settings.dev.py  settings.github.py  settings.unittests.py
gamestackr/core/tests/fixtures/: misc.py
gamestackr/project/: asgi.py  wsgi.py
gamestackr/project/settings/: base.py  logging.py
scripts/: entrypoint.sh
