[tool.poetry]
name = "gamestackr"
version = "0.1.0"
description = ""
authors = ["Cédric <cedric.delagree@gmail.com>"]
license = "MIT"
readme = "README.md"
#packages = [{include = "gamestackr"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.10"
django-filter = "^24.3"
django-split-settings = "^1.3.2"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
